--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "This project is a boilerplate for building an Express.js application with MVC architecture",
   "scripts": {
     "start": "node --watch ./server.js",
+    "lint": "eslint **/*.js",
+    "lint:fix": "eslint --fix **/*.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "type": "module",
@@ -17,6 +19,12 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^7.1.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
